# afgame

./: .gitignore  README.md
clojure/: core.clj  project.clj  testcore.clj
go/: Makefile  afgame.go  afgame_test.go  main.go
haskell/: Main.cabal  TODO.md  afgame.cabal  default.nix  hafgame.cabal  main.hs  stack.yaml
haskell/src/: Afgame.hs  Main.hs
haskell/src/Afgame/: Internal.hs  ListT.hs  MVC.hs  Main.hs  Pipes.hs
haskell/test/: Main.hs  test.hs
js/: afgame.js
python/: afgame.py  afgame_test.py
