name:           afgame
version:        0.1
cabal-version:  >= 1.18
build-type:     Simple
author:         pierrer@pi3r.be

library
  default-language: Haskell2010
  hs-source-dirs:  src
  build-depends: base >= 4,
                  containers,
                  either,
                  mtl,
                  pipes >= 4.1 && < 4.2,
                  safe
  exposed-modules: Afgame, Afgame.Pipes
  ghc-options:     -fno-warn-missing-signatures


executable afgame
  default-language: Haskell2010
  main-is:         main.hs
  build-depends:  afgame,
                  base >= 4

test-suite tests
  default-language:  Haskell2010
  type:              exitcode-stdio-1.0
  main-is:           test.hs
  hs-source-dirs:    test
  build-depends:     afgame,
                     base >= 4.0,
                     HUnit,
                     test-framework,
                     test-framework-hunit
  ghc-options:       -fno-warn-missing-signatures