name:           afgame
version:        0.1
cabal-version:  >= 1.18
build-type:     Simple
author:         pierrer@pi3r.be

executable afgame
  default-language: Haskell2010
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:  base >= 4,
                  mtl,
                  containers,
                  pipes > 4.0,
                  pipes-parse > 2.0
  ghc-options:     -Wall

test-suite tests
  default-language:  Haskell2010
  type:              exitcode-stdio-1.0
  main-is:           test.hs
  hs-source-dirs:    src, test
  build-depends:     base >= 4.0,
                     mtl,
                     containers,
                     pipes > 4.0,
                     test-framework,
                     test-framework-hunit,
                     test-framework-quickcheck2,
                     HUnit
  other-modules:  Afgame
  ghc-options:       -Wall